with mobile design

--- a/booking.html
+++ b/booking.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Contrology Studio - Booking</title>
     <link rel="stylesheet" href="assets/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,15 +15,21 @@
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-BW7WHWGVHE"></script>
     <script src="assets/analytics.js"></script>
+    <script src="assets/toggleMenu.js" defer></script> 
     <script src="assets/goTop.js" defer></script> 
 </head>
 
 <body>
     <header id="header">
-        <a href="index.html">
-            <img id="home-logo" alt="Contrology Studio" src="images/logo-white.png">
-        </a>
-        <div id="menu-sect">
+        <section id="logo-sect">
+            <a href="index.html">
+                <img id="logo" alt="Contrology Studio" src="images/logo-white.png">
+            </a>
+            <div id="menu-control" onclick="toggleMenu(this, 'menu-sect')">
+                ≡
+            </div>
+        </section>
+        <section id="menu-sect" class="content">
             <nav>
                 <div class="dropdown">
                     <a href="about.html#page-header">About</a>
@@ -48,14 +55,16 @@
                     <a href="contact.html#page-header">Contact</a>
                 </div>
             </nav>
-        </div>
+        </section>
         <div id="page-header">
-            <h1>Booking</h1>
+            <div class="content">
+                <h1>Booking</h1>
+            </div>
         </div>
     </header>
     <i id="topBtn" class=" fa fa-angle-up" onclick="topFunction()" title="Go to top"></i>
     <main>
-        <section id="booking">
+        <section id="booking" class="content">
             <iframe id='cliniko-31684730' 
                 src='https://contrology-studio.au4.cliniko.com/bookings?business_id=1445984725960238773&embedded=true' 
                 frameborder='0' 
@@ -79,7 +88,7 @@
     </main>
     <footer>
         <div class="copyright-area">
-            Copyright &copy; 2024-2025 Contrology Studio
+            Copyright &copy; 2024-2025 <a href="index.html">Contrology Studio</a>
         </div>
     </footer>
 </body>
