--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Contrology Studio - About us</title>
     <link rel="stylesheet" href="assets/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,15 +16,21 @@
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-BW7WHWGVHE"></script>
     <script src="assets/analytics.js"></script>
+    <script src="assets/toggleMenu.js" defer></script> 
     <script src="assets/goTop.js" defer></script> 
 </head>
 
 <body>
     <header id="header">
-        <a href="index.html">
-            <img id="home-logo" alt="Contrology Studio" src="images/logo-white.png">
-        </a>
-        <div id="menu-sect">
+        <section id="logo-sect">
+            <a href="index.html">
+                <img id="logo" alt="Contrology Studio" src="images/logo-white.png">
+            </a>
+            <div id="menu-control" onclick="toggleMenu(this, 'menu-sect')">
+                ≡
+            </div>
+        </section>
+        <section id="menu-sect" class="content">
             <nav>
                 <div class="dropdown">
                     <a href="#page-header">About</a>
@@ -49,136 +56,150 @@
                     <a href="contact.html#page-header">Contact</a>
                 </div>
             </nav>
-        </div>
-        <div id="page-header">
-            <h1>Our Story</h1>
-        </div>
+        </section>
+        <section id="page-header">
+            <div class="content">
+                <h1>Our Story</h1>
+            </div>
+        </section>
     </header>
     <i id="topBtn" class=" fa fa-angle-up" onclick="topFunction()" title="Go to top"></i>
     <main>
         <section id="about-main1">
-            <p>At Contrology Studio, we are driven by our strong belief in the power of mindful and controlled movements. We believe in movement therapy which nurture both the body and mind, prevent injuries and promote overall well-being. Guided by our philosophy, "Control your body, control your energy," we combine physiotherapy expertise with the principles of Pilates and GYROTONIC® to provide tailored care for every patient.
-            </p>
-            <p>We offer:
-                <ul>
-                    <li>Comprehensive physiotherapy consultations and assessments</li>
-                    <li>Individualized exercise plans tailored to your needs</li>
-                    <li>A focus on one-on-one sessions, with the option of 1:2 classes for advanced clients</li>
-                    <li>A relaxing, private, and beautifully designed environment for your sessions</li>
-                    <li>The occasional visit from our "Pawfessional Emotional Counsellor," Salad, to brighten your day</li>
-                </ul>
-            </p>
-            <p>Let us guide you on your journey toward strength, balance, and overall wellness.</p>
+            <div class="content">
+                <p>At Contrology Studio, we are driven by our strong belief in the power of mindful and controlled movements. We believe in movement therapy which nurture both the body and mind, prevent injuries and promote overall well-being. Guided by our philosophy, "Control your body, control your energy," we combine physiotherapy expertise with the principles of Pilates and GYROTONIC® to provide tailored care for every patient.
+                </p>
+                <p>We offer:
+                    <ul>
+                        <li>Comprehensive physiotherapy consultations and assessments</li>
+                        <li>Individualized exercise plans tailored to your needs</li>
+                        <li>A focus on one-on-one sessions, with the option of 1:2 classes for advanced clients</li>
+                        <li>A relaxing, private, and beautifully designed environment for your sessions</li>
+                        <li>The occasional visit from our "Pawfessional Emotional Counsellor," Salad, to brighten your day</li>
+                    </ul>
+                </p>
+                <p>Let us guide you on your journey toward strength, balance, and overall wellness.</p>
+            </div>
         </section>
         <section id="team">
-            <h2>Our Team</h2>
-            <div class="flex-row">
-                <div>
-                    <a href="#winkie" class="photo-col">
-                        <img src="images/winkie01.png" alt="">
-                        <h4>Winkie Chu</h4>
-                        <p>Physiotherapist</p>
-                    </a>
-                </div>
-                <div>
-                    <a href="#beverly" class="photo-col">
-                        <img src="images/beverly01.png" alt="">
-                        <h4>Beverly Au</h4>
-                        <p>Physiotherapist</p>
-                    </a>
-                </div>
-                <div>
-                    <a href="#shirley" class="photo-col">
-                        <img src="images/shirley01.png" alt="" style="object-position: 50% 80%">
-                        <h4>Qinru (Shirley) Zhu</h4>
-                        <p>Gyrotonic® Instructor</p>
-                    </a>
-                </div>
-            </div>
-            <br>
-            <a href="#salad">
-                <h4>Salad</h4>
-                <p>Pawfessional Emotional Counsellor</p>
-            </a>
-        </section>
-        <section id="winkie" class="persona">
-            <h3>Winkie Chu</h3> 
-            <div class="flex-row">
-                <div class="left">
-                    <div class="filler"></div>
-                    <img src="images/winkie02.png" alt="">
+            <div class="content">
+                <h2>Our Team</h2>
+                <div class="flex-row">
                     <div>
-                        <h4 class="qualification">Qualifications</h4>
-                        BAppSc (Physiotherapy) USYD <br>
-                        APPI Clinical Pilates Instructor <br>
-                        Gyrotonic® Level 1 
+                        <a href="#winkie" class="photo-col">
+                            <img src="images/winkie01.png" alt="">
+                            <h4>Winkie Chu</h4>
+                            <p>Physiotherapist</p>
+                        </a>
+                        <br>
+                        <a href="#salad">
+                            <h4>Salad</h4>
+                            <p>Pawfessional Emotional Counsellor</p>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#beverly" class="photo-col">
+                            <img src="images/beverly01.png" alt="">
+                            <h4>Beverly Au</h4>
+                            <p>Physiotherapist</p>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#shirley" class="photo-col">
+                            <img src="images/shirley01.png" alt="" style="object-position: 50% 80%">
+                            <h4>Qinru (Shirley) Zhu</h4>
+                            <p>Gyrotonic® Instructor</p>
+                        </a>
                     </div>
                 </div>
-                <div class="right">
-                    <p>Winkie is a physiotherapist who graduated from the University of Sydney. With five years of diverse experience in hospitals, private clinics, and nursing homes across Sydney, she has developed a deep understanding of patient care. Building on her physiotherapy expertise, Winkie has also completed the APPI Clinical Pilates Instructor Course and the GYROTONIC® Instructor Course, enabling her to offer a truly integrated approach to rehabilitation and wellness.</p>
-                    <p>Beyond her dedication to helping patients achieve their goals, Winkie enjoys exploring new coffee spots and bubble tea shops in her free time. </p>
-                    <p>At the studio, she loves spending time with our beloved Pawfessional Emotional Counsellor, Salad, who never fails to brighten her day.</p>
-                    <p>Spoken Language: English, Mandarin, Cantonese</p>
-                </div>
             </div>
         </section>
-        <section id="beverly" class="persona">
-            <h3>Beverly Au</h3> 
-            <div class="flex-row">
-                <div class="left">
-                    <div class="filler"></div>
-                    <img src="images/beverly02.png" alt="">
-                    <div>
-                        <h4 class="qualification">Qualifications</h4>
-                        BAppSc (Physiotherapy) USYD <br>
-                        APPI Clinical Pilates Instructor 
+        <section id="winkie">
+            <div class="content persona">
+                <h3>Winkie Chu</h3> 
+                <div class="flex-row">
+                    <div class="left">
+                        <div class="filler"></div>
+                        <img src="images/winkie02.png" alt="">
+                        <div>
+                            <h4 class="qualification">Qualifications</h4>
+                            BAppSc (Physiotherapy) USYD <br>
+                            APPI Clinical Pilates Instructor <br>
+                            Gyrotonic® Level 1 
+                        </div>
+                    </div>
+                    <div class="right">
+                        <p>Winkie is a physiotherapist who graduated from the University of Sydney. With five years of diverse experience in hospitals, private clinics, and nursing homes across Sydney, she has developed a deep understanding of patient care. Building on her physiotherapy expertise, Winkie has also completed the APPI Clinical Pilates Instructor Course and the GYROTONIC® Instructor Course, enabling her to offer a truly integrated approach to rehabilitation and wellness.</p>
+                        <p>Beyond her dedication to helping patients achieve their goals, Winkie enjoys exploring new coffee spots and bubble tea shops in her free time. </p>
+                        <p>At the studio, she loves spending time with our beloved Pawfessional Emotional Counsellor, Salad, who never fails to brighten her day.</p>
+                        <p>Spoken Language: English, Mandarin, Cantonese</p>
                     </div>
                 </div>
-                <div class="right">
-                    <p>Beverly is a qualified physiotherapist and Pilates instructor who enjoys providing home visits and teaching Pilates. She completed the APPI Clinical Pilates Instructor Course and has also undertaken the APA women’s health course.</p>
-                    <p>Beverly is passionate about combining her expertise in movement and rehabilitation to help clients achieve their goals through safe, effective, and enjoyable sessions. With years of experience in physiotherapy, she specialises in applying Pilates principles to improve strength, mobility, and recovery. Beverly loves creating personalized Pilates programs that empower clients of all levels to move better and feel their best. She is excited to bring her knowledge and energy to Contrology Studio, supporting her clients’ journey to enhanced strength, flexibility, and overall well-being!</p>
-                    <p>Spoken Language: English, Mandarin, Cantonese</p>
-                </div>
             </div>
         </section>
-        <section id="shirley" class="persona">
-            <h3>Shirley Zhu</h3> 
-            <div class="flex-row">
-                <div class="left">
-                    <div class="filler"></div>
-                    <img src="images/shirley02.png" alt="">
-                    <div>
-                        <h4 class="qualification">Qualifications</h4>
-                        Gyrotonic® Level 1 <br>
-                        RYT200 <br>
-                        YTT300 <br>
-                        Inside Flow Certified instructor
+        <section id="beverly">
+            <div class="content persona">
+                <h3>Beverly Au</h3> 
+                <div class="flex-row">
+                    <div class="left">
+                        <div class="filler"></div>
+                        <img src="images/beverly02.png" alt="">
+                        <div>
+                            <h4 class="qualification">Qualifications</h4>
+                            BAppSc (Physiotherapy) USYD <br>
+                            APPI Clinical Pilates Instructor 
+                        </div>
+                    </div>
+                    <div class="right">
+                        <p>Beverly is a qualified physiotherapist and Pilates instructor who enjoys providing home visits and teaching Pilates. She completed the APPI Clinical Pilates Instructor Course and has also undertaken the APA women’s health course.</p>
+                        <p>Beverly is passionate about combining her expertise in movement and rehabilitation to help clients achieve their goals through safe, effective, and enjoyable sessions. With years of experience in physiotherapy, she specialises in applying Pilates principles to improve strength, mobility, and recovery. Beverly loves creating personalized Pilates programs that empower clients of all levels to move better and feel their best. She is excited to bring her knowledge and energy to Contrology Studio, supporting her clients’ journey to enhanced strength, flexibility, and overall well-being!</p>
+                        <p>Spoken Language: English, Mandarin, Cantonese</p>
                     </div>
                 </div>
-                <div class="right">
-                    <p>Shirley is a passionate yoga and Gyrotonic instructor dedicated to enhancing both physical and mental well-being. She began practicing yoga in 2019 and was immediately drawn to the transformative effects it had on her body and mind. Inspired by this experience, Shirley completed her YTT 300 & RYT 200 and began teaching yoga in 2022.</p>
-                    <p>To further expand her expertise, Shirley completed the GYROTONIC® Level 1 training, the GYROKINESIS® foundation course, and the GYROTONER® course. These certifications, combined with her deep love for yoga, allow her to offer a holistic approach to movement, strength, and flexibility. At the studio, Shirley is passionate about helping her clients achieve their wellness goals and explore the vast potential of their bodies through these transformative methods.</p>
-                    <p>Spoken Language: English, Mandarin</p>
+            </div>
+        </section>
+        <section id="shirley">
+            <div class="content persona">
+                <h3>Shirley Zhu</h3> 
+                <div class="flex-row">
+                    <div class="left">
+                        <div class="filler"></div>
+                        <img src="images/shirley02.png" alt="">
+                        <div>
+                            <h4 class="qualification">Qualifications</h4>
+                            Gyrotonic® Level 1 <br>
+                            RYT200 <br>
+                            YTT300 <br>
+                            Inside Flow Certified instructor
+                        </div>
+                    </div>
+                    <div class="right">
+                        <p>Shirley is a passionate yoga and Gyrotonic instructor dedicated to enhancing both physical and mental well-being. She began practicing yoga in 2019 and was immediately drawn to the transformative effects it had on her body and mind. Inspired by this experience, Shirley completed her YTT 300 & RYT 200 and began teaching yoga in 2022.</p>
+                        <p>To further expand her expertise, Shirley completed the GYROTONIC® Level 1 training, the GYROKINESIS® foundation course, and the GYROTONER® course. These certifications, combined with her deep love for yoga, allow her to offer a holistic approach to movement, strength, and flexibility. At the studio, Shirley is passionate about helping her clients achieve their wellness goals and explore the vast potential of their bodies through these transformative methods.</p>
+                        <p>Spoken Language: English, Mandarin</p>
+                    </div>
                 </div>
             </div>
         </section>
-        <section id="salad" class="persona">
-            <h3>Salad</h3> 
-            <div class="flex-row">
-                <div class="left">
-                    <img src="images/salad02.png" alt="" style="object-position: 50% 100%">
-                </div>
-                <div class="right">
-                    <p>Salad holds no certifications in counseling but is a naturally born expert in providing emotional support to all our staff and patients. Her warm welcome and cheeky, fluffy white coat are her signature charms. She occasionally visits our studio to encourage patients to keep up the hard work.</p>
-                    <p>P.S. Patients are kindly requested to feed her only one snack per session due to Salad’s undisclosed weight concerns.</p>
-                    <p>Spoken Language: WOOF WOOF~!</p>
+        <section id="salad">
+            <div class="content persona">
+                <h3>Salad</h3> 
+                <div class="flex-row">
+                    <div class="left">
+                        <img src="images/salad02.png" alt="" style="object-position: 50% 100%">
+                    </div>
+                    <div class="right">
+                        <p>Salad holds no certifications in counseling but is a naturally born expert in providing emotional support to all our staff and patients. Her warm welcome and cheeky, fluffy white coat are her signature charms. She occasionally visits our studio to encourage patients to keep up the hard work.</p>
+                        <p>P.S. Patients are kindly requested to feed her only one snack per session due to Salad’s undisclosed weight concerns.</p>
+                        <p>Spoken Language: WOOF WOOF~!</p>
+                    </div>
                 </div>
             </div>
         </section>
     </main>
     <footer>
         <div class="copyright-area">
-            Copyright &copy; 2024-2025 Contrology Studio
+            Copyright &copy; 2024-2025 <a href="index.html">Contrology Studio</a>
         </div>
     </footer>
 </body>
