--- a/faq.html
+++ b/faq.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Contrology Studio - FAQ</title>
     <link rel="stylesheet" href="assets/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,16 +16,22 @@
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-BW7WHWGVHE"></script>
     <script src="assets/analytics.js"></script>
+    <script src="assets/toggleMenu.js" defer></script> 
     <script src="assets/goTop.js" defer></script> 
     <script src="assets/toggleAnswer.js" defer></script> 
 </head>
 
 <body>
     <header id="header">
-        <a href="index.html">
-            <img id="home-logo" alt="Contrology Studio" src="images/logo-white.png">
-        </a>
-        <div id="menu-sect">
+        <section id="logo-sect">
+            <a href="index.html">
+                <img id="logo" alt="Contrology Studio" src="images/logo-white.png">
+            </a>
+            <div id="menu-control" onclick="toggleMenu(this, 'menu-sect')">
+                ≡
+            </div>
+        </section>
+        <section id="menu-sect" class="content">
             <nav>
                 <div class="dropdown">
                     <a href="about.html#page-header">About</a>
@@ -50,89 +57,95 @@
                     <a href="contact.html#page-header">Contact</a>
                 </div>
             </nav>
-        </div>
-        <div id="page-header">
-            <h1>FAQ</h1>
-        </div>
+        </section>
+        <section id="page-header">
+            <div class="content">
+                <h1>FAQ</h1>
+            </div>
+        </section>
     </header>
     <i id="topBtn" class=" fa fa-angle-up" onclick="topFunction()" title="Go to top"></i>
     <main>
         <section id="faq">
-            <h2>General</h2>
-            <div class="question">
-                <h3 onclick="toggleAns(this)">Can I walk in to see a therapist?</h3>
-                <p>We operated by appointment. Please book your session with customer service before visiting! For any inquiries, we highly encourage you to communicate with customer service via texts and emails because our therapists are always paying 100% attention and effort to our clients and may not have time to answer your questions.
-                </p>
-            </div>
-            <div class="question">
-                <h3 onclick="toggleAns(this)">How do I book?</h3>
-                <p>You can find how to book on our website. We also accept booking via emails, phone, text message or social media. You will receive a text message reminder in 48 hours before your session.
-                </p>
-            </div>
-            <div class="question">
-                <h3 onclick="toggleAns(this)">Any Parking?</h3>
-                <p>We are located across from Burwood Plaza, which offers 2 hours of free parking. Additionally, Burleigh Street parking is just a 2-minute walk from the studio—please note that fees may apply.
-                </p>
-            </div>
-            <div class="question">
-                <h3 onclick="toggleAns(this)">Can I change clothes at your studio?</h3>
-                <p>Yes, we have a clean common bathroom next to our studio, feel free to ask our staff for directions.
-                </p>
-            </div>
-            <div class="question">
-                <h3 onclick="toggleAns(this)">What should I wear to our studio?</h3>
-                <p>Wear your favorite comfortable activewear! Make sure it’s not baggy so your therapist can see your movements. Non-slip socks are <span class="emphasize">required</span>, or simply purchase some pretty ones from us!
-                </p>
-            </div>
-            <div class="question">
-                <h3 onclick="toggleAns(this)">What should I bring to our studio?</h3>
-                <p>Your happy self! And maybe a towel and water bottle. If you're claiming insurance, please bring your card. We provide all essential equipment and mats.
-                </p>
-            </div>
-            <div class="question">
-                <h3 onclick="toggleAns(this)">What happens in Consultation session?</h3>
-                <p>Your therapist will gather information about your general health, recent injuries, and goals to start with, then you will be asked to perform some tests. The results will be explained to you, and your treatment/exercise plan will be made according to your assessment results and your goals.
-                </p>
-            </div>
-            <div class="question">
-                <h3 onclick="toggleAns(this)">Do you offer manual therapy?</h3>
-                <p>At our clinic, we emphasize active treatment and movement therapy as the foundation of recovery. While we recognize that passive treatments, such as pain management through various modalities, can be beneficial in the early stages of an injury, our focus is on helping clients regain their daily function through purposeful movement. Our physiotherapy sessions prioritize active treatments and exercises, with guidance for managing acute injuries. Our goal is to help you get back on track as quickly as possible—so get ready to move with us!
-                </p>
-            </div>
-            <br><br>
-            <h2>Cancellation and reschedule</h2>
-            <div class="question">
-                <h3 onclick="toggleAns(this)">What is your cancellation policy?</h3>
-                <p>We kindly ask for at least 24 hours' notice if you need to cancel or reschedule your session. This allows us to offer the spot to another client and keep our schedule running smoothly. Late cancellations or no-shows will incur full charge. Thank you for your understanding and cooperation!
-                </p>
-            </div>
-            <div class="question">
-                <h3 onclick="toggleAns(this)">Before Booking</h3>
-                <p>Please take a moment to review our policy before making any bookings. By confirming your appointment, you acknowledge that you fully understand and agree to the terms outlined. We kindly ask that you arrive on time for your session to ensure a smooth experience for all. Thank you for your cooperation.
-                </p>
+            <div class="content">
+                <h2>General</h2>
+                <div class="question">
+                    <h3 onclick="toggleAns(this)">Can I walk in to see a therapist?</h3>
+                    <p>We operated by appointment. Please book your session with customer service before visiting! For any inquiries, we highly encourage you to communicate with customer service via texts and emails because our therapists are always paying 100% attention and effort to our clients and may not have time to answer your questions.
+                    </p>
+                </div>
+                <div class="question">
+                    <h3 onclick="toggleAns(this)">How do I book?</h3>
+                    <p>You can find how to book on our website. We also accept booking via emails, phone, text message or social media. You will receive a text message reminder in 48 hours before your session.
+                    </p>
+                </div>
+                <div class="question">
+                    <h3 onclick="toggleAns(this)">Any Parking?</h3>
+                    <p>We are located across from Burwood Plaza, which offers 2 hours of free parking. Additionally, Burleigh Street parking is just a 2-minute walk from the studio—please note that fees may apply.
+                    </p>
+                </div>
+                <div class="question">
+                    <h3 onclick="toggleAns(this)">Can I change clothes at your studio?</h3>
+                    <p>Yes, we have a clean common bathroom next to our studio, feel free to ask our staff for directions.
+                    </p>
+                </div>
+                <div class="question">
+                    <h3 onclick="toggleAns(this)">What should I wear to our studio?</h3>
+                    <p>Wear your favorite comfortable activewear! Make sure it’s not baggy so your therapist can see your movements. Non-slip socks are <span class="emphasize">required</span>, or simply purchase some pretty ones from us!
+                    </p>
+                </div>
+                <div class="question">
+                    <h3 onclick="toggleAns(this)">What should I bring to our studio?</h3>
+                    <p>Your happy self! And maybe a towel and water bottle. If you're claiming insurance, please bring your card. We provide all essential equipment and mats.
+                    </p>
+                </div>
+                <div class="question">
+                    <h3 onclick="toggleAns(this)">What happens in Consultation session?</h3>
+                    <p>Your therapist will gather information about your general health, recent injuries, and goals to start with, then you will be asked to perform some tests. The results will be explained to you, and your treatment/exercise plan will be made according to your assessment results and your goals.
+                    </p>
+                </div>
+                <div class="question">
+                    <h3 onclick="toggleAns(this)">Do you offer manual therapy?</h3>
+                    <p>At our clinic, we emphasize active treatment and movement therapy as the foundation of recovery. While we recognize that passive treatments, such as pain management through various modalities, can be beneficial in the early stages of an injury, our focus is on helping clients regain their daily function through purposeful movement. Our physiotherapy sessions prioritize active treatments and exercises, with guidance for managing acute injuries. Our goal is to help you get back on track as quickly as possible—so get ready to move with us!
+                    </p>
+                </div>
+                <br><br>
+                <h2>Cancellation and reschedule</h2>
+                <div class="question">
+                    <h3 onclick="toggleAns(this)">What is your cancellation policy?</h3>
+                    <p>We kindly ask for at least 24 hours' notice if you need to cancel or reschedule your session. This allows us to offer the spot to another client and keep our schedule running smoothly. Late cancellations or no-shows will incur full charge. Thank you for your understanding and cooperation!
+                    </p>
+                </div>
+                <div class="question">
+                    <h3 onclick="toggleAns(this)">Before Booking</h3>
+                    <p>Please take a moment to review our policy before making any bookings. By confirming your appointment, you acknowledge that you fully understand and agree to the terms outlined. We kindly ask that you arrive on time for your session to ensure a smooth experience for all. Thank you for your cooperation.
+                    </p>
+                </div>
             </div>
         </section>
         <section id="policy">
-            <h2>Our Policy</h2>
-            <p>Consultation and Trial: <span class="emphasize">80 minutes</span>. <br>
-                (30 mins assessment + 50 mins session)<br>
-                Other sessions: <span class="emphasize">50 minutes</span>.
-            </p>
-            <p>Late arrival may shorten your session. If late over <span class="emphasize">20 minutes</span> or failure to make changes in <span class="emphasize">24-hour advance</span>,<br>
-                <span class="emphasize">full charge</span> will be applied.
-            </p>
-            <p>Single session is valid for <span class="emphasize">4 weeks</span> <br>
-                5 session package is valid for <span class="emphasize">10 weeks</span><br>
-                Membership is valid for <span class="emphasize">16 weeks</span><br>
-                Expired session/membership is <span class="emphasize">Non-refundable and Non-transferrable</span>.
-            </p>
-            <p>We prioritize safety and enjoyment! Please wear <span class="emphasize">non-slip socks</span>, and report any discomfort at anytime. Note, we're not liable for any issues unless they result from our negligence. Thanks for your understanding!
-            </p>
+            <div class="content">
+                <h2>Our Policy</h2>
+                <p>Consultation and Trial: <span class="emphasize">80 minutes</span>. <br>
+                    (30 mins assessment + 50 mins session)<br>
+                    Other sessions: <span class="emphasize">50 minutes</span>.
+                </p>
+                <p>Late arrival may shorten your session. If late over <span class="emphasize">20 minutes</span> or failure to make changes in <span class="emphasize">24-hour advance</span>,<br>
+                    <span class="emphasize">full charge</span> will be applied.
+                </p>
+                <p>Single session is valid for <span class="emphasize">4 weeks</span> <br>
+                    5 session package is valid for <span class="emphasize">10 weeks</span><br>
+                    Membership is valid for <span class="emphasize">16 weeks</span><br>
+                    Expired session/membership is <span class="emphasize">Non-refundable and Non-transferrable</span>.
+                </p>
+                <p>We prioritize safety and enjoyment! Please wear <span class="emphasize">non-slip socks</span>, and report any discomfort at anytime. Note, we're not liable for any issues unless they result from our negligence. Thanks for your understanding!
+                </p>
+            </div>
         </section>
     </main>
     <footer>
         <div class="copyright-area">
-            Copyright &copy; 2024-2025 Contrology Studio
+            Copyright &copy; 2024-2025 <a href="index.html">Contrology Studio</a>
         </div>
     </footer>
 </body>
