testing for video problem trial 2

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="assets/index.css">
     <link rel="icon" href="images/favicon.png">
     <!-- Google tag (gtag.js) -->
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-BW7WHWGVHE"></script>
-    <script src="assets/analytics.js"></script> -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BW7WHWGVHE"></script>
+    <script src="assets/analytics.js"></script>
     <script src="assets/toggleMenu.js" defer></script> 
     <script src="assets/goTop.js" defer></script> 
     <script src="assets/autoplay.js"></script> 
@@ -23,7 +23,7 @@
 
 <body>
     <header class="video-container">
-        <video id="myVideo" preload="auto" muted loop>
+        <video id="myVideo" preload="auto" muted loop playsinline>
             <source src="assets/class.mp4" type="video/mp4">
         </video> 
         <div id="video-message" class="content">
