--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </div>   
         </section>
         <section id="home-main4">
-            <iframe src="https://www.google.com/maps/d/embed?mid=1sMewBJOmuAHziNlrVwF8Kq8Y5P3UuGs&ehbc=2E312F" width="100%" height="600"></iframe>
+            <iframe src="https://www.google.com/maps/d/embed?mid=1sMewBJOmuAHziNlrVwF8Kq8Y5P3UuGs&ehbc=2E312F"></iframe>
         </section>
         <section id="home-main5">
             <div class="flex-row content">
