major updates for photos, new staff and policy

--- a/faq.html
+++ b/faq.html
@@ -114,7 +114,7 @@
                 <h2>Cancellation and reschedule</h2>
                 <div class="question">
                     <h3 onclick="toggleAns(this)">What is your cancellation policy?</h3>
-                    <p>We kindly ask for at least 24 hours' notice if you need to cancel or reschedule your session. This allows us to offer the spot to another client and keep our schedule running smoothly. Late cancellations or no-shows will incur full charge. Thank you for your understanding and cooperation!
+                    <p>We kindly ask for at least 24 hours' notice if you need to cancel or reschedule your session. This allows us to offer the spot to another client and keep our schedule running smoothly. Late cancellations or no-shows will incur <span class="emphasize">full charge</span>. Thank you for your understanding and cooperation!
                     </p>
                 </div>
                 <div class="question">
@@ -126,9 +126,9 @@
         </section>
         <section id="policy">
             <div class="content">
-                <h2>Our Policy</h2>
-                <p>Consultation and Trial: <span class="emphasize">80 minutes</span>. <br>
-                    (30 mins assessment + 50 mins session)<br>
+                <h2>Kindly Read Our Policy Before Booking</h2>
+                <p>Consultation and Trial: <span class="emphasize">60 minutes</span>. <br>
+                    (20 mins assessment + 40 mins session)<br>
                     Other sessions: <span class="emphasize">50 minutes</span>.
                 </p>
                 <p>Late arrival may shorten your session. If late over <span class="emphasize">20 minutes</span> or failure to make changes in <span class="emphasize">24-hour advance</span>,<br>
@@ -136,8 +136,8 @@
                 </p>
                 <p>Single session is valid for <span class="emphasize">4 weeks</span> <br>
                     5 session package is valid for <span class="emphasize">10 weeks</span><br>
-                    Membership is valid for <span class="emphasize">16 weeks</span><br>
-                    Expired session/membership is <span class="emphasize">Non-refundable and Non-transferrable</span>.
+                    Membership is valid for <span class="emphasize">no. session x2 weeks</span><br>
+                    Session/membership is <span class="emphasize">Non-refundable and Non-transferrable</span>.
                 </p>
                 <p>We prioritize safety and enjoyment! Please wear <span class="emphasize">non-slip socks</span>, and report any discomfort at anytime. Note, we're not liable for any issues unless they result from our negligence. Thanks for your understanding!
                 </p>
