--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
         <section id="home-main1">
             <div class="flex-row content">
                 <div id="home-main1-left" style="flex: 3 1">
-                    <h2>Everyone is different, so is our studio.</h2>
+                    <h2>Move with Precision, Live with Power</h2>
                     <p>
-                        At Contrology Studio, we believe in individualised movement-therapy. 
+                        At Contrology Studio, our physiotherapists crafts evidence-based, personalised exercise program to enhance your unique movement journey.
                     </p>
                 </div>
                 <div id="home-main1-right">
@@ -125,7 +125,7 @@
                         <div id="home-main3-1x">
                         </div>
                         <p>
-                            Experience our unique 80-minute initial session tailored to your needs, starting with a 30-minute comprehensive assessment followed by a 50-minute Pilates or Gyrotonic® session conducted by a qualified physiotherapist. Together, we’ll set your health goals and develop an individualized program.
+                            Experience our unique 60-minute initial session tailored to your needs, starting with a 20-minute comprehensive assessment followed by a 40-minute Pilates or Gyrotonic® session conducted by a qualified physiotherapist. Together, we’ll set your health goals and develop an individualized program.
                         </p>
                     </div>
                     <div>
@@ -149,8 +149,8 @@
                     </p>
                     <p>Email: <span class="small-text">contrologystudio.sydney@gmail.com</span></p>
                     <h3 id="open-hours">OPEN HOURS</h3>
-                    <p>Mon to Sun</p>
-                    <p>By Appointment Only</p>
+                    <p>Mon to Sun<br>
+                    By Appointment Only</p>
                 </div>
                 <div id="follow-us">
                     <h3>FOLLOW US</h3>
