--- a/services.html
+++ b/services.html
@@ -70,14 +70,14 @@
             <div class="content">
                 <h2>Initial Physiotherapy Assessment & Pilates/Gyrotonic® Session</h2>
                 <div class="image-mobile">
-                    <img src="images/assessment.png" alt="" style="object-position: 50% 70%;">
+                    <img src="images/assessment.jpg" alt="Initial Physiotherapy Assessment & Pilates/Gyrotonic® Session" style="object-position: 50% 60%;">
                 </div>
                 <div class="flex-row">
                     <div class="description">
-                        <p>Our unique 80-minute initial session includes a 30-minute comprehensive assessment, followed by a 50-minute Pilates or Gyrotonic® session tailored to your condition. Conducted by a qualified Physiotherapist, this extended session allows us to thoroughly understand your body and develop a personalized program focused on your goals. Whether you're dealing with a persistent injury or aiming for specific goal, we’ll work together to help you succeed.</p>
+                        <p>Our unique 60-minute initial session includes a 20-minute comprehensive assessment, followed by a 40-minute Pilates or Gyrotonic® session tailored to your condition. Conducted by a qualified Physiotherapist, this extended session allows us to thoroughly understand your body and develop a personalized program focused on your goals. Whether you're dealing with a persistent injury or aiming for specific goal, we’ll work together to help you succeed.</p>
                     </div>
                     <div class="image">
-                        <img src="images/assessment.png" alt="" style="object-position: 50% 70%;">
+                        <img src="images/assessment.jpg" alt="Initial Physiotherapy Assessment & Pilates/Gyrotonic® Session" style="object-position: 50% 60%;">
                     </div>
                 </div>
             </div>
@@ -87,7 +87,7 @@
                 <h2>Physiotherapy</h2>
                 <div class="flex-row">
                     <div class="image">
-                        <img src="images/physiotherapy.png" alt="" >
+                        <img src="images/physiotherapy.jpg" alt="physiotherapy session" >
                     </div>
                     <div class="description">
                         <p>Our physiotherapy sessions include a detailed history, a thorough assessment of your mobility, strength, and coordination, and identification of any underlying issues. You’ll receive expert guidance on treatment options, preventative strategies, and a personalized recovery plan. These sessions are ideal for clients with recent or chronic injuries who are seeking an active approach to recovery.</p>
@@ -99,14 +99,14 @@
             <div class="content">
                 <h2>Clinical Pilates</h2>
                 <div class="image-mobile">
-                    <img src="images/pilates.png" alt="" style="object-position: 50% 75%;">
+                    <img src="images/pilates.jpg" alt="pilates session" style="object-position: 50% 100%;">
                 </div>
                 <div class="flex-row">
                     <div class="description left">
                         <p>Our Clinical Pilates program is designed for those looking for a purposeful approach to injury rehabilitation or achieving specific goals. Unlike other fitness Pilates, our sessions focus on intentional, controlled movement tailored to your needs. You’ll learn not only how to perform each exercise but also why it’s essential for your recovery. Suitable for everyone—from Pilates beginners to advanced clients seeking focused improvements.</p>
                     </div>
                     <div class="image">
-                        <img src="images/pilates.png" alt="" style="object-position: 50% 75%;">
+                        <img src="images/pilates.jpg" alt="pilates session" style="object-position: 50% 100%;">
                     </div>
                 </div>
             </div>
@@ -128,14 +128,14 @@
             <div class="content">
                 <h2>Clinical Pilates (Duet)</h2>
                 <div class="image-mobile">
-                    <img src="images/pilates-duet.png" alt="" style="object-position: 50% 55%;">
+                    <img src="images/pilates-duet.jpg" alt="Duet Session">
                 </div>
                 <div class="flex-row">
                     <div class="description left">
                         <p>Our Duet Clinical Pilates provides an affordable way to enjoy Pilates with a friend or family member, all while following your own personalized exercise plan. Guided by our experienced Physiotherapists, you’ll share the experience but still receive tailored care to achieve your individual goals together.</p>
                     </div>
                     <div class="image">
-                        <img src="images/pilates-duet.png" alt="" style="object-position: 50% 55%;">
+                        <img src="images/pilates-duet.jpg" alt="Duet Session">
                     </div>
                 </div>
             </div>
