--- a/about.html
+++ b/about.html
@@ -88,28 +88,37 @@
                 <div class="flex-row">
                     <div>
                         <a href="#winkie" class="photo-col">
-                            <img src="images/winkie01.png" alt="">
+                            <img src="images/winkie01.jpg" alt="Winkie">
                             <h4>Winkie Chu</h4>
-                            <p>Physiotherapist</p>
-                        </a>
-                        <br>
-                        <a href="#salad">
-                            <h4>Salad</h4>
-                            <p>Pawfessional Emotional Counsellor</p>
-                        </a>
-                    </div>
-                    <div>
-                        <a href="#beverly" class="photo-col">
-                            <img src="images/beverly01.png" alt="">
-                            <h4>Beverly Au</h4>
                             <p>Physiotherapist</p>
                         </a>
                     </div>
                     <div>
                         <a href="#shirley" class="photo-col">
-                            <img src="images/shirley01.png" alt="" style="object-position: 50% 80%">
-                            <h4>Qinru (Shirley) Zhu</h4>
+                            <img src="images/shirley01.jpg" alt="Shirley">
+                            <h4>Shirley Zhu</h4>
                             <p>Gyrotonic® Instructor</p>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#beverly" class="photo-col">
+                            <img src="images/beverly01.jpg" alt="Beverly">
+                            <h4>Beverly Au</h4>
+                            <p>Physiotherapist</p>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#joey" class="photo-col">
+                            <img src="images/joey01.jpg" alt="Joey">
+                            <h4>Joey Cheang</h4>
+                            <p>Physiotherapist</p>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#salad">
+                            <img src="images/salad01.jpg" alt="Salad">
+                            <h4>Salad</h4>
+                            <p>Pawfessional Counsellor</p>
                         </a>
                     </div>
                 </div>
@@ -121,7 +130,7 @@
                 <div class="flex-row">
                     <div class="left">
                         <div class="filler"></div>
-                        <img src="images/winkie02.png" alt="">
+                        <img src="images/winkie02.jpg" alt="Winkie Chu">
                         <div>
                             <h4 class="qualification">Qualifications</h4>
                             BAppSc (Physiotherapy) USYD <br>
@@ -138,13 +147,37 @@
                 </div>
             </div>
         </section>
+        <section id="shirley">
+            <div class="content persona">
+                <h3>Qinru (Shirley) Zhu</h3> 
+                <div class="flex-row">
+                    <div class="left">
+                        <div class="filler"></div>
+                        <img src="images/shirley02.png" alt="Qinru (Shirley) Zhu">
+                        <div>
+                            <h4 class="qualification">Qualifications</h4>
+                            Gyrotonic® Level 1 <br>
+                            Gyrokinesis® Apprentice <br>
+                            Gyrotoner® <br>
+                            RYT200, YTT300 <br>
+                            Inside Flow Certified instructor
+                        </div>
+                    </div>
+                    <div class="right">
+                        <p>Shirley is a passionate yoga and Gyrotonic instructor dedicated to enhancing both physical and mental well-being. She began practicing yoga in 2019 and was immediately drawn to the transformative effects it had on her body and mind. Inspired by this experience, Shirley completed her YTT 300 & RYT 200 and began teaching yoga in 2022.</p>
+                        <p>To further expand her expertise, Shirley completed the GYROTONIC® Level 1 training, the GYROKINESIS® foundation course, and the GYROTONER® course. These certifications, combined with her deep love for yoga, allow her to offer a holistic approach to movement, strength, and flexibility. At the studio, Shirley is passionate about helping her clients achieve their wellness goals and explore the vast potential of their bodies through these transformative methods.</p>
+                        <p>Spoken Language: English, Mandarin</p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section id="beverly">
             <div class="content persona">
                 <h3>Beverly Au</h3> 
                 <div class="flex-row">
                     <div class="left">
                         <div class="filler"></div>
-                        <img src="images/beverly02.png" alt="">
+                        <img src="images/beverly02.jpg" alt="">
                         <div>
                             <h4 class="qualification">Qualifications</h4>
                             BAppSc (Physiotherapy) USYD <br>
@@ -159,25 +192,24 @@
                 </div>
             </div>
         </section>
-        <section id="shirley">
+        <section id="joey">
             <div class="content persona">
-                <h3>Shirley Zhu</h3> 
+                <h3>Joey Cheang</h3> 
                 <div class="flex-row">
                     <div class="left">
                         <div class="filler"></div>
-                        <img src="images/shirley02.png" alt="">
+                        <img src="images/joey02.jpg" alt="Joey Cheang">
                         <div>
                             <h4 class="qualification">Qualifications</h4>
-                            Gyrotonic® Level 1 <br>
-                            RYT200 <br>
-                            YTT300 <br>
-                            Inside Flow Certified instructor
+                            Bachelor of Exercise and Nutrition Sc UQ <br>
+                            Master of Physiotherapy USYD <br>
+                            APPI Clinical Pilates Instructor 
                         </div>
                     </div>
                     <div class="right">
-                        <p>Shirley is a passionate yoga and Gyrotonic instructor dedicated to enhancing both physical and mental well-being. She began practicing yoga in 2019 and was immediately drawn to the transformative effects it had on her body and mind. Inspired by this experience, Shirley completed her YTT 300 & RYT 200 and began teaching yoga in 2022.</p>
-                        <p>To further expand her expertise, Shirley completed the GYROTONIC® Level 1 training, the GYROKINESIS® foundation course, and the GYROTONER® course. These certifications, combined with her deep love for yoga, allow her to offer a holistic approach to movement, strength, and flexibility. At the studio, Shirley is passionate about helping her clients achieve their wellness goals and explore the vast potential of their bodies through these transformative methods.</p>
-                        <p>Spoken Language: English, Mandarin</p>
+                        <p>Joey is an accredited physiotherapist and APPI Clinical Pilates instructor with experience in treating musculoskeletal injuries. </p>
+                        <p>Committed to helping individuals achieve their health and wellness goals, she offers personalized movement practices grounded in a strong understanding of anatomy and rehabilitation. By blending Pilates techniques with physiotherapy principles, she provides a holistic approach to recovery and fitness. Whether you're recovering from an injury or aiming to enhance your overall fitness, Joey tailors each session to meet your unique needs, ensuring safe and effective progress every step of the way.</p>
+                        <p>Spoken Language: English, Mandarin, Cantonese</p>    
                     </div>
                 </div>
             </div>
@@ -187,7 +219,7 @@
                 <h3>Salad</h3> 
                 <div class="flex-row">
                     <div class="left">
-                        <img src="images/salad02.png" alt="" style="object-position: 50% 100%">
+                        <img src="images/salad02.jpg" alt="Salad" style="object-position: 50% 100%">
                     </div>
                     <div class="right">
                         <p>Salad holds no certifications in counseling but is a naturally born expert in providing emotional support to all our staff and patients. Her warm welcome and cheeky, fluffy white coat are her signature charms. She occasionally visits our studio to encourage patients to keep up the hard work.</p>
